--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "idl",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@sasmeee/igdl": "^1.0.0",
-    "express": "^4.19.2",
-    "nodemon": "^3.1.3"
-  }
+	"name": "idl",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon index.js",
+		"start": "node index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"@sasmeee/igdl": "^1.0.0",
+		"express": "^4.19.2",
+		"nodemon": "^3.1.3"
+	}
 }
